agregado de link de redes sociales, modificacion de boton en home y servicios con link, agregado de miembro de equipo y modificacion de equipodata para agregar linkedin y miembro de equipo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/grupobruzza-menu.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+
+    <meta
+      name="description"
+      content="Grupo Bruzza ofrece soluciones integrales en Diseño, Construcción y Obra. Optimizamos espacios comerciales y residenciales con tecnología avanzada, innovación constante y eficiencia garantizada. Solicita tu diagnóstico personalizado ahora."
+    />
+
+    <meta
+      name="keywords"
+      content="grupo bruzza, diseño arquitectónico, construcción de edificios, obra civil, facility management, mantenimiento preventivo, gestión edilicia, soluciones tecnológicas construcción, reformas integrales, innovación arquitectónica, eficiencia inmobiliaria, diagnóstico construcción"
+    />
     <title>Grupo Bruzza</title>
   </head>
   <body>
